--- a/ansible_project/playbook.yml
+++ b/ansible_project/playbook.yml
@@ -36,9 +36,16 @@
         state: latest
         update_cache: yes
 
-    - name: Add Docker GPG apt Key
-      shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmour -o /etc/apt/trusted.gpg.d/docker.gpg
-     
+    #- name: Add Docker GPG apt Key
+    #  shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmour -o /etc/apt/trusted.gpg.d/docker.gpg
+    - name: Check that the Docker GPG key exists
+      stat:
+        path: /etc/apt/trusted.gpg.d/docker.gpg
+      register: stat_result
+    
+    - name: Add Docker GPG apt Key when gpg key not exists
+      shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmour  -o /etc/apt/trusted.gpg.d/docker.gpg
+      when: not stat_result.stat.exists
       
 
     - name: Add Docker Repository
@@ -64,9 +71,17 @@
         state: restarted
         enabled: yes
     
-    - name: Get Kubernetes packege key
+    #- name: Get Kubernetes packege key
+    #  shell:  curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.30/deb/Release.key |  gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+    - name: Check that the GPG key Kubernetes exists
+      stat:
+        path: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+      register: kube_result
+
+    - name: Get Kubernetes packege key when key not exists
       shell:  curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.30/deb/Release.key |  gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-    
+      when: not kube_result.stat.exists
+
     - name: Add Kubernetes repository
       apt_repository:
         repo: "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.30/deb/ /"
