--- a/ansible_project/playbook.yml
+++ b/ansible_project/playbook.yml
@@ -43,7 +43,7 @@
         path: /etc/apt/trusted.gpg.d/docker.gpg
       register: stat_result
     
-    - name: Add Docker GPG apt Key when gpg key not exists
+    - name: Add Docker GPG apt Key  if it doesn't exist
       shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmour  -o /etc/apt/trusted.gpg.d/docker.gpg
       when: not stat_result.stat.exists
       
@@ -78,7 +78,7 @@
         path: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
       register: kube_result
 
-    - name: Get Kubernetes packege key when key not exists
+    - name: Get Kubernetes packege key  if it doesn't exist
       shell:  curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.30/deb/Release.key |  gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
       when: not kube_result.stat.exists
 
@@ -166,6 +166,7 @@
      become: yes
      command: sh /tmp/kubernetes_join_command
      register: joined_or_not
+     ignore_errors: yes
 
 
 
