install docker with k8s

--- a/ansible_project/playbook.yml
+++ b/ansible_project/playbook.yml
@@ -69,6 +69,18 @@
         name: containerd
         state: restarted
         enabled: yes
+
+    - name: Update apt and install docker
+      apt:
+        name: docker-ce
+        state: latest
+        update_cache: true
+        
+    - name: adding existing user '{{ user }}' to group docker
+      user:
+        name: '{{ user }}'
+        groups: docker
+        append: yes
     
     
    
